static/style.css
:root {
  --font-serif: Palatino, "Bookman Old Style", Georgia, "New York", "Times New Roman", Times, serif;
  --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  font-family: var(--font-serif);
  --dark-gray: rgb(90, 90, 90);
  --gray: rgb(220, 220, 220);
  --light-gray: rgb(240, 240, 240);
  --dark-blue: rgb(0, 11, 134);
  --blue: rgb(68, 100, 199);
  --light-blue: rgb(112, 158, 230);
}
body {
  margin: 0 auto;
  padding: 0 1rem;
  max-width: 1280px;
}
header {
  font-family: var(--font-sans);
  font-size: 1rem;
}
h1, h2 {
  font-weight: bold;
}
h1 {
  font-size: 1.5rem;
}
h2 {
  font-size: 1.25rem;
  margin-bottom: 0;
}
header {
  border-bottom: 2px solid black;
  padding: 0.5rem 0;
  margin: 1rem;
}
header:hover a {
  text-decoration: none;
}
main {
  margin: 0 1rem;
  word-break: break-word;
}
main a {
  word-break: break-all;
}
section {
  margin: 0;
}
a {
  color:black;
  text-decoration: none;
  font-family: var(--font-sans);
  /* white-space: nowrap; */
  /* text-overflow: ellipsis; */
}
a:hover {
  text-decoration: underline;
}
input, button {
  color: black;
  font-family: var(--font-sans);
  border-radius: 5px;
}
input[type="button"], button {
  border: 1px solid var(--gray);
  background-color: var(--light-gray);
  padding: 0.5rem 1.5rem;
}
input, textarea {
  font-family: var(--font-sans);
  border: 1px solid var(--gray);
  padding: 0.5rem 0.5rem;
  border-radius: 5px;
}
:focus {
  outline: 2px solid var(--light-blue);
}
::placeholder {
  color: var(--dark-gray);
}
ol, ul {
  padding-inline-start: 1rem;
}
table {
  border-collapse: collapse;
  margin: 1rem 0;
}
th, td {
  border: 1px solid var(--gray);
  padding: 0.5rem;
}
th {
  background-color: var(--light-gray);
}
.tags {
  margin: 1.5rem 0;
}
.tag {
  display: inline-block;
  font-family: var(--font-sans);
  font-weight: lighter;
  border: 1px solid var(--gray);
  margin: 0.25rem 0.5rem 0.25rem 0;
  padding: 0.25rem 1rem;
  border-radius: 7px;
}
.search-form {
    width: 100%;
    margin-bottom: 1rem;
    display: flex;
    gap: 0.5rem;
}
.search-form input[type="search"] {
    flex: 1;
}
#recipes h2 {
  font-family: var(--font-sans);
  margin-bottom: 1.25rem;
}
.tag-list .recipe-link {
  font-weight: normal;
}
.recipe-link {
  font-family: var(--font-serif);
  font-weight: bold;
}
.recipe-snippet {
  color: var(--dark-gray);
  white-space: pre;
  margin: 0.5rem 0 1rem 0;
}
.recipe-form {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}
.recipe-body a {
  font-family: var(--font-serif);
  color: var(--blue);
}
@media print {
  .no-print, .no-print * {
    display: none !important;
  }
}

